Bug 1829603 part 1: Include the class attribute in the parent process a11y cache. r=morgan

This is used by the Web Access NVDA add-on to identify and remediate some inaccessible elements on websites with accessibility problems.
It is also useful for developers using screen readers when trying to identify specific elements in the absence of semantics.

Differential Revision: https://phabricator.services.mozilla.com/D176896