accessible/base/CacheConstants.h
@@ -19,7 +19,7 @@ class CacheDomain {
   static constexpr uint64_t Bounds = ((uint64_t)0x1) << 2;
   static constexpr uint64_t Resolution = ((uint64_t)0x1) << 3;
   static constexpr uint64_t Text = ((uint64_t)0x1) << 4;
-  static constexpr uint64_t DOMNodeID = ((uint64_t)0x1) << 5;
+  static constexpr uint64_t DOMNodeIDAndClass = ((uint64_t)0x1) << 5;
   static constexpr uint64_t State = ((uint64_t)0x1) << 6;
   static constexpr uint64_t GroupInfo = ((uint64_t)0x1) << 7;
   static constexpr uint64_t Actions = ((uint64_t)0x1) << 8;
